Added recording to docs + syntax hightlighting

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,17 @@ nav:
   - home: index.md
   - Installation.md
   - Getting Started.md
+  - Recording.md
   - Reference:
     - Screen.md
     - Animation.md
   - doc generation.md
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
